Fix vertical align center on shop by look carousel
- adding `center` key to tiny slider settings doesn't seem to work possibly
  due to css interplay. We chose to use a sharp surgical css knife !important

[#172209505]

--- a/resources/css/custom-carousel.css
+++ b/resources/css/custom-carousel.css
@@ -26,6 +26,9 @@
 .tns-nav>.tns-nav-active:focus {
     outline: var(--p-color) auto 1px;
 }
+.slides-middle .tns-item {
+    vertical-align: middle !important;
+}
 
 /* Carousel Arrows */
 /* Adapted from Slick css*/
